# PythonDependencyAnalyzer

./: .gitignore  .pre-commit-config.yaml  CONTEXT.md  README.md  pyproject.toml
config/: pyvis.json
config/pyvis/: layout.yaml  network.yaml  pda.yaml  vis.yaml
config/pyvis/themes/: dark.yaml  light.yaml
docs/: components.md  guidelines.md  module-resolution-current-state.md  module-resolution-policy.md  module-resolution-roadmap.md  review.md  specification-boundary-audit.md
examples/: example.py
fda/analyzer/: analyzer.py  scope.py
notebooks/: ast_scope_explorer.py  example.py  forbidden_imports.py  resolution_check.py
notebooks/utils/: wasm.py
options/: pyvis.json
scripts/: export-wasm.sh
src/fda/: __init__.py  constants.py
src/fda/analyzer/: __init__.py  analyzer.py  node.py
src/fda/exceptions/: __init__.py  base.py  imports.py
src/fda/importer/: __init__.py  collector.py  config.py  graph.py  registry.py
src/fda/node/: __init__.py  ast_node.py  tree.py  types.py
src/fda/parser/: __init__.py  parser.py
src/fda/resolver/: __init__.py  resolver.py  scope.py
src/fda/specification/: __init__.py  base.py  constants.py  types.py
src/fda/tools/: __init__.py  logger.py  singleton.py
src/fda/types/: __init__.py
src/pda/: __init__.py  __main__.py  cli.py  constants.py
src/pda/analyzer/: __init__.py  base.py  depth.py  target.py
src/pda/cli/: __init__.py  app.py  commands.py  flags.py  output.py  parser.py
src/pda/collector/: __init__.py  collector.py
src/pda/config/: __init__.py  graph.py  types.py  validation.py
src/pda/exceptions/: __init__.py  analyzer.py  base.py  imports.py  modules.py  options.py  paths.py  scope.py  spec.py
src/pda/graph/: __init__.py  base.py  imports.py  module.py  path.py
src/pda/imports/: __init__.py  analyzer.py
src/pda/models/: __init__.py
src/pda/nodes/: __init__.py  base.py
src/pda/nodes/paths/: node.py  (+3 more)
src/pda/resolution/: __init__.py  classification.py  context.py  conversion.py  filesystem.py  imports.py  locations.py  models.py  paths.py  resolver.py  search.py
src/pda/resolver/: resolver.py  scope.py
src/pda/specification/: __init__.py
src/pda/structures/: __init__.py
src/pda/tools/: __init__.py  logger.py  ordered_set.py  paths.py  serialization.py  templates.py
src/pda/types/: __init__.py  nested_defaultdict.py  typehints.py
src/pydepgraph/: __init__.py
src/pydepgraph/analyzer/: __init__.py  base.py
src/pydepgraph/collector/: __init__.py  collector.py
src/pydepgraph/config/: __init__.py  base.py  types.py
src/pydepgraph/exceptions/: __init__.py  paths.py
src/pydepgraph/graph/: __init__.py  base.py  imports.py  types.py
src/pydepgraph/imports/: __init__.py  analyzer.py
src/pydepgraph/nodes/: __init__.py  base.py  types.py
src/pydepgraph/resolver/: resolver.py  scope.py
src/pydepgraph/specification/: __init__.py
src/pydepgraph/tools/: ordered_set.py  paths.py  utils.py
src/pydepgraph/types/: __init__.py
tests/examples/: imports.py
tests/examples/names/: imports.py  qualnames.py
tests/examples/scope/: __init__.py  assignments.py  basic_scopes.py  closures.py  comprehensions.py  control_flow.py  decorators.py  exceptions.py  imports_scoped.py  nested.py  parameters.py  shadowing.py  special_methods.py  undefined.py
tests/functional/: test_cycles.py
tests/notebooks/: test_wasm.py
tests/pda/: test_cli.py
(+189 files in other folders)
