[project]
name = "fda"
version = "0.0.1"
description = "Function Dependency Analyzer - Analyze and visualize function dependencies in Python projects."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Jakim" }]

dependencies = ["anytree==2.13.0", "pydantic>=2.0.0", "networkx>=3.0"]

[project.optional-dependencies]
dev = [
    "mypy==1.19.1",
    "pre-commit==4.5.1",
    "pylint==4.0.4",
    "pylint-pydantic==0.4.1",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["fda"]

[tool.pytest.ini_options]
addopts = """
--import-mode=importlib
"""

[tool.coverage.report]
show_missing = true

[tool.hatch.build.targets.wheel]
packages = ["src/fda"]

[tool.mypy]
python_version = "3.12"
files = "src/fda"
exclude = ["^tests/", "^\\..*"]
ignore_missing_imports = true
strict = true
