[project]
name = "pda"
version = "0.1.0"
description = "Python Dependency Analyzer - Analyze and visualize module/function dependencies in Python projects."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Jakim" }]

dependencies = [
    "anytree==2.13.0",
    "beautifulsoup4==4.15.0",
    "networkx==3.6.1",
    "pydantic==2.13.4",
    "pyvis==0.3.2",
    "pyyaml==6.0.3",
]

[project.scripts]
pda = "pda.cli:main"

[project.optional-dependencies]
notebook = ["marimo==0.23.11"]

[dependency-groups]
dev = [
    "mypy==2.1.0",
    "pre-commit==4.6.0",
    "pylint==4.0.6",
    "pylint-pydantic==0.4.1",
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["pda"]

[tool.pytest.ini_options]
addopts = """
--import-mode=importlib
"""

[tool.coverage.report]
show_missing = true

[tool.hatch.build.targets.wheel]
packages = ["src/pda"]

[tool.mypy]
python_version = "3.13"
files = "src/pda"
exclude = ["^tests/", "^\\..*"]
ignore_missing_imports = true
strict = true
